# Policy-Diff-Assistant

./: .env.example  .gitignore  LICENSE.md  Makefile  README.md  pyproject.toml  requirements.txt
configs/: app.toml  logging.toml
src/policy_diff_assist/: __init__.py  alignment.py  config.py  embeddings.py  ingestion.py  llm.py  logging.py  main.py  models.py  pipeline.py  provenance.py  reporting.py  similarity.py  ui.py
