[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "policy-diff-assistant"
version = "1.0.0"
description = "Semantic document version comparison for policy texts"
requires-python = ">=3.10"
authors = [{name = "Shamith Nakka"}]
license = {text = "MIT"}

dependencies = [
    "sentence-transformers>=3.0",
    "transformers>=4.40",
    "torch>=2.0",
    "msgspec>=0.18",
    "pymupdf>=1.23",
    "numpy>=1.24",
    "scipy>=1.11",
    "gradio>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.5",
]
gpu = [
    "bitsandbytes>=0.41",  # Quantization for GPU inference
]

[project.scripts]
policy-diff = "policy_diff_assist.main:main"

[tool.hatch.version]
path = "src/policy_diff_assist/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/policy_diff_assist"]

[tool.hatch.envs.default]
dependencies = ["pytest", "pytest-cov", "black", "ruff", "mypy"]

[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11", "3.12"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
exclude = ["venv", ".git"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
disallow_untyped_defs = false